Fixed vertical spacing at login-screen w/css

--- a/ShoppingList/ShoppingList/Content/css/main.css
+++ b/ShoppingList/ShoppingList/Content/css/main.css
@@ -21,3 +21,23 @@
     cursor: inherit;
     display: block;
 }
+
+.row.row-grid [class*="col-"] + [class*="col-"] {
+    margin-top: 15px;
+}
+
+@media (min-width: 1200px) {
+    .row.row-grid [class*="col-lg-"] + [class*="col-lg-"] {
+        margin-top: 15px;
+    }
+}
+@media (min-width: 992px) {
+    .row.row-grid [class*="col-md-"] + [class*="col-md-"] {
+        margin-top: 15px;
+    }
+}
+@media (min-width: 768px) {
+    .row.row-grid [class*="col-sm-"] + [class*="col-sm-"] {
+        margin-top: 15px;
+    }
+}
